<resources>
    <string name="app_name">Imnuri Tineret Cahul</string>

    <string name="server">ftpupload.net</string>
    <string name="user">epiz_32295679</string>
    <string name="port">21</string>
    <string name="password">GKd0PhDzIvLm0</string>

    <string name="hymn_font">Open Sans, sans-serif</string>

    <string name="hymns_ro">Imnuri</string>
    <string name="menu_audio_ro">Audio</string>
    <string name="menu_notspdf_ro">Note PDF</string>
    <string name="hymns_ru">Гимны</string>
    <string name="menu_audio_ru">Аудио</string>
    <string name="menu_notspdf_ru">Ноты PDF</string>
    <string name="menu_updates_ro">Actualizare</string>
    <string name="menu_updates_ru">Обновления</string>

    <string name="imns_not_found_ro">Actualizati lista de imnuri din <b>Actualizare</b></string>
    <string name="imns_not_found_ru">Обновите список гимнов в <b>Actualizare</b></string>

    <string name="ro_internal_hymns_folder">ro_hymns</string>
    <string name="ro_internal_mp3_folder">ro_audio</string>
    <string name="ro_internal_pdf_folder">ro_notes_pdf</string>

    <string name="ru_internal_hymns_folder">ru_hymns</string>
    <string name="ru_internal_mp3_folder">ru_audio</string>
    <string name="ru_internal_pdf_folder">ru_notes_pdf</string>


    <string name="ro_external_hymns_folder">/htdocs/ro/imnuri</string>
    <string name="ro_external_mp3_folder">/htdocs/ro/audio</string>
    <string name="ro_external_pdf_folder">/htdocs/ro/note_pdf</string>

    <string name="ru_external_hymns_folder">/htdocs/ru/imnuri</string>
    <string name="ru_external_mp3_folder">/htdocs/ru/audio</string>
    <string name="ru_external_pdf_folder">/htdocs/ru/note_pdf</string>

    <string name="settings_connect_to_internet_ro">Vă rugăm să vă conectați la Internet</string>
    <string name="settings_connect_to_internet_ru">Пожалуйста, подключитесь к Интернету</string>
    <string name="settings_hymn_extension">.txt</string>

    <string name="ready_ro">Se pregăteștete</string>
    <string name="ready_ru">Идет подготовка</string>
    <string name="cancel_ro">Anulare</string>
    <string name="cancel_ru">Отмена</string>
    <string name="canceling_msg_ro">Vom încheia după actualizarea ultimului element deja început</string>
    <string name="canceling_msg_ru">Завершится после обновления последнего уже начатого элемента</string>
    <string name="cancel_operation_update_ro">Finalizarea operației...</string>
    <string name="cancel_operation_update_ru">Завершение операции...</string>
    <string name="dont_exist_ro">Ne pare rău, fișierul nu există pe server</string>
    <string name="dont_exist_ru">К сожалению файл не существует на сервере</string>
    <string name="downald_hymn_ro">Se descarcă imnul</string>
    <string name="downald_hymn_ru">Гимн скачивается</string>
    <string name="downald_audio_ro">Se descarcă audio</string>
    <string name="downald_pdf_ro">Se descarcă fișierul PDF</string>
    <string name="downald_audio_ru">Аудио скачивается</string>
    <string name="downald_pdf_ru">PDF скачивается</string>
    <string name="all_hymns_are_updated_ro">Toate imnurile sunt deja actualizate</string>
    <string name="all_audio_are_updated_ro">Toate fișierele audio sunt deja actualizate</string>
    <string name="all_pdf_are_updated_ro">Toate notele PDF sunt deja actualizate</string>
    <string name="all_hymns_are_updated_ru">Все гимны уже обновлены</string>
    <string name="all_audio_are_updated_ru">Все аудиофайлы уже обновлены</string>
    <string name="all_pdf_are_updated_ru">Все ноты PDF уже обновлены</string>
    <string name="delete_audio_ro">Apăsați de două ori pentru a șterge</string>
    <string name="delete_audio_ru">Нажмите дважды, чтобы удалить</string>
    <string name="play_ro">Apăsați de două ori pentru a reda</string>
    <string name="play_ru">Нажмите дважды, чтобы воспроизвести</string>
    <string name="chords_absent_ro">Acordurile pentru acest imn încă nu sunt disponibile</string>
    <string name="hymn_words_absent_ro">Cuvintele acestui imn încă nu sunt disponibile</string>
    <string name="chords_absent_ru">Аккорды для этого гимна пока недоступны</string>
    <string name="hymn_words_absent_ru">Слова этого гимна пока недоступны</string>
    <string name="delete_ro">" Ștergeți "</string>
    <string name="delete_ru">" Удалить "</string>
    <string name="downald_single_audio_ro">Descărcare audio</string>
    <string name="downald_single_audio_ru">Загрузка аудио</string>
    <string name="downald_single_pdf_ro">Descărcare PDF</string>
    <string name="downald_single_pdf_ru">Загрузка PDF</string>
    <string name="see_chords_ro">Afișare acorduri</string>
    <string name="see_chords_ru">Показать аккорды</string>
    <string name="open_pdfs_ro">Note PDF</string>
    <string name="open_pdfs_ru">Ноты PDF</string>
    <string name="dwnld_hymn_ro">Actualizare imnuri</string>
    <string name="dwnld_hymn_ru">Обновить гимны</string>
    <string name="dwnld_audio_ro">Actualizare fișiere audio</string>
    <string name="dwnld_audio_ru">Обновить аудиофайлы</string>
    <string name="dwnld_pdf_ro">Actualizare PDF</string>
    <string name="dwnld_pdf_ru"> Обновить PDF</string>
    <string name="dwnldN_hymn_ro">Descărcare imnuri</string>
    <string name="dwnldN_hymn_ru">Загрузка гимнов</string>
    <string name="dwnldN_audio_ro">Descărcare audio</string>
    <string name="dwnldN_audio_ru">Загрузка аудио</string>
    <string name="dwnldN_pdf_ro">Descărcare PDF</string>
    <string name="dwnldN_pdf_ru">Загрузка PDF</string>

    <string name="all_elements_are_updated_ro">Toate fisierele sunt deja actualizate</string>
    <string name="all_elements_are_updated_ru">Все файлы уже обновлены</string>
    <string name="downald_all_hymn_ro">Se descarcă imnurile, elementul</string>
    <string name="downald_all_hymn_ru">Гимны скачиваются, элемент</string>
    <string name="downald_all_audio_ro">Se descarcă audiourile, elementul</string>
    <string name="downald_all_pdf_ro">Se descarcă fișierele PDF, elementul</string>
    <string name="downald_all_audio_ru">Аудио скачивается, элемент</string>
    <string name="downald_all_pdf_ru">PDF скачивается, элемент</string>
    <string name="language_ro">Limba</string>
    <string name="language_ru">Язык</string>
    <string name="no_hymns_saved_ro">Nu aveți imnuri salvate</string>
    <string name="no_hymns_saved_ru">У вас нет сохраненных гимнов</string>
    <string name="app_name_ro">Imnuri Tineret</string>
    <string name="app_name_ru">Гимны Молодёжи</string>
    <string name="language_drawer_ro">ro</string>
    <string name="language_drawer_ru">ru</string>
    <string name="no_hymns_in_category_ro">Momentan nu există imnuri ce aparțin acestei categorii</string>
    <string name="no_hymns_in_category_ru">В настоящее время нет гимнов, относящихся к этой категории</string>
    <string name="update_audio_ro">Apăsați butonul de mai sus\npentru a descărca melodia</string>
    <string name="update_pdf_ro">Apăsați butonul de mai sus\npentru a descărca pdf-ul</string>
    <string name="update_audio_ru">Нажмите кнопку выше,\nчтобы скачать песню</string>
    <string name="update_pdf_ru">Нажмите на кнопку выше,\nчтобы скачать пдф</string>
</resources>