<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_hymns_ro"
            android:icon="@drawable/outline_library_music_24"
            android:title="@string/hymns_ro" />

        <item
            android:id="@+id/nav_audio_ro"
            android:icon="@drawable/play_btn_black01"
            android:title="@string/menu_audio_ro" />

        <item
            android:id="@+id/nav_pdfs_ro"
            android:icon="@drawable/outline_description_24"
            android:title="@string/menu_notspdf_ro" />

        <item
            android:id="@+id/nav_updates"
            android:icon="@drawable/outline_cloud_sync_24"
            android:title="@string/menu_updates_ro" />
    </group>

    <item
        android:id="@+id/nav_langue_select"
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_langue_select_subitem"
                android:icon="@drawable/outline_translate_24"
                android:title="Limba" />
        </menu>
    </item>

</menu>