<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_hymns_ro">

    <fragment
        android:id="@+id/nav_hymns_ro"
        android:name="project.rew.imnuritineretcahul.fragments.HomeFragment"
        android:label="@string/hymns_ro"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_hymns_ro_to_nav_audio_ro"
            app:destination="@id/nav_audio_ro" />
        <action
            android:id="@+id/action_nav_hymns_ro_to_nav_pdfs_ro"
            app:destination="@id/nav_pdfs_ro" />
        <action
            android:id="@+id/action_nav_hymns_ro_to_nav_updates"
            app:destination="@id/nav_updates" />
    </fragment>

    <!--<fragment
        android:id="@+id/nav_hymns_ru"
        android:name="project.rew.imnuritineretcahul.ru.HomeFragment"
        android:label="@string/hymns_ru"
        tools:layout="@layout/fragment_home" />-->

    <fragment
        android:id="@+id/nav_audio_ro"
        android:name="project.rew.imnuritineretcahul.fragments.AudioFragment"
        android:label="@string/menu_audio_ro"
        tools:layout="@layout/fragment_audio" >
        <action
            android:id="@+id/action_nav_audio_ro_to_nav_hymns_ro"
            app:destination="@id/nav_hymns_ro" />
        <action
            android:id="@+id/action_nav_audio_ro_to_nav_pdfs_ro"
            app:destination="@id/nav_pdfs_ro" />
        <action
            android:id="@+id/action_nav_audio_ro_to_nav_updates"
            app:destination="@id/nav_updates" />
    </fragment>

    <fragment
        android:id="@+id/nav_pdfs_ro"
        android:name="project.rew.imnuritineretcahul.fragments.NotePDFragment"
        android:label="@string/menu_notspdf_ro"
        tools:layout="@layout/fragment_notepdf" >
        <action
            android:id="@+id/action_nav_pdfs_ro_to_nav_hymns_ro"
            app:destination="@id/nav_hymns_ro" />
        <action
            android:id="@+id/action_nav_pdfs_ro_to_nav_audio_ro"
            app:destination="@id/nav_audio_ro" />
        <action
            android:id="@+id/action_nav_pdfs_ro_to_nav_updates"
            app:destination="@id/nav_updates" />
    </fragment>
    <fragment
        android:id="@+id/nav_updates"
        android:name="project.rew.imnuritineretcahul.fragments.UpdatesFragment"
        android:label="@string/menu_updates_ro"
        tools:layout="@layout/fragment_updates" >
        <action
            android:id="@+id/action_nav_updates_to_nav_audio_ro"
            app:destination="@id/nav_audio_ro" />
        <action
            android:id="@+id/action_nav_updates_to_nav_hymns_ro"
            app:destination="@id/nav_hymns_ro" />
        <action
            android:id="@+id/action_nav_updates_to_nav_pdfs_ro"
            app:destination="@id/nav_pdfs_ro" />
    </fragment>

    <!--<fragment
        android:id="@+id/nav_audio_ru"
        android:name="project.rew.imnuritineretcahul.ru.AudioFragment"
        android:label="@string/menu_audio_ru"
        tools:layout="@layout/fragment_audio" />

    <fragment
        android:id="@+id/nav_pdfs_ru"
        android:name="project.rew.imnuritineretcahul.ru.NotePDFragment"
        android:label="@string/menu_notspdf_ru"
        tools:layout="@layout/fragment_notepdf" />-->

</navigation>