<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ro.AudioFragment"
    android:background="@color/background_updates">

    <ScrollView
        android:layout_marginTop="10dp"
        android:id="@+id/scrool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/downald_all_elements"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/text_color_updt"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btnHymnsUpdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:text="@string/dwnld_hymn_ro"
                        android:backgroundTint="@color/btn_color_updt"
                        android:textColor="@color/btn_text_color_updt"
                        android:textAllCaps="false"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnHymnsUpdate_ru"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/btn_color_updt"
                        android:textColor="@color/btn_text_color_updt"
                        android:text="@string/dwnld_hymn_ru"
                        android:textAllCaps="false"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btnAudioUpdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/btn_color_updt"
                        android:textColor="@color/btn_text_color_updt"
                        android:text="@string/dwnld_audio_ro"
                        android:textAllCaps="false"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnAudioUpdate_ru"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:backgroundTint="@color/btn_color_updt"
                        android:textColor="@color/btn_text_color_updt"
                        android:layout_weight="1"
                        android:text="@string/dwnld_audio_ru"
                        android:textAllCaps="false"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btnPdfUpdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/btn_color_updt"
                        android:textColor="@color/btn_text_color_updt"
                        android:text="@string/dwnld_pdf_ro"
                        android:textAllCaps="false"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnPdfUpdate_ru"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:backgroundTint="@color/btn_color_updt"
                        android:textColor="@color/btn_text_color_updt"
                        android:layout_weight="1"
                        android:text="@string/dwnld_pdf_ru"
                        android:textAllCaps="false"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_marginTop="70dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/downald_only_nonexist"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/text_color_updt"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btnHymnsUpdateN"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/btn_color_updt"
                        android:textColor="@color/btn_text_color_updt"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:text="@string/dwnldN_hymn_ro"
                        android:textAllCaps="false"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnHymnsUpdate_ruN"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/btn_color_updt"
                        android:textColor="@color/btn_text_color_updt"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:text="@string/dwnldN_hymn_ru"
                        android:textAllCaps="false"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btnAudioUpdateN"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/btn_color_updt"
                        android:textColor="@color/btn_text_color_updt"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:text="@string/dwnldN_audio_ro"
                        android:textAllCaps="false"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnAudioUpdate_ruN"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:backgroundTint="@color/btn_color_updt"
                        android:textColor="@color/btn_text_color_updt"
                        android:layout_weight="1"
                        android:text="@string/dwnldN_audio_ru"
                        android:textAllCaps="false"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btnPdfUpdateN"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:backgroundTint="@color/btn_color_updt"
                        android:textColor="@color/btn_text_color_updt"
                        android:layout_weight="1"
                        android:text="@string/dwnldN_pdf_ro"
                        android:textAllCaps="false"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnPdfUpdate_ruN"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:backgroundTint="@color/btn_color_updt"
                        android:textColor="@color/btn_text_color_updt"
                        android:layout_weight="1"
                        android:text="@string/dwnldN_pdf_ru"
                        android:textAllCaps="false"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>